# private-pageindex-rag

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  design.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: AGENT_MEMORY.md  ARCHITECTURE.md  PROBLEM_SOLVED.md  PROJECT.md  STRUCTURE.md  TROUBLESHOOTING.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CommandPalette.tsx  ErrorBoundary.tsx  InteractiveBackground.tsx  LoadingScreen.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/lib/: api.ts  markdown.tsx  motion.ts  store.ts  (+2 more)
private_pageindex/: __init__.py  __main__.py  cli.py  cli_main.py  config.py  storage.py
private_pageindex/indexing/: __init__.py  entity_extraction.py  heading_detection.py  tree_builder.py  tree_postprocessing.py  tree_validation.py
private_pageindex/ingest/: pdf_text.py  pipeline.py
private_pageindex/llm/: __init__.py  base.py  ollama.py
private_pageindex/retrieval/: __init__.py  answering.py  tree_search.py
private_pageindex/web/: __init__.py  app.py
tests/: test_answering.py  test_async_ollama.py  test_cli.py  test_config.py  test_entity_extraction.py  test_ingest_pipeline.py  test_ollama_client.py  test_pdf_text.py  test_storage.py  test_tree_builder.py  test_tree_search.py  test_web_app.py
(+28 files in other folders)
