[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "private-pageindex-rag"
version = "0.1.0"
description = "Fully private local PageIndex-style RAG for text PDFs."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pymupdf>=1.24",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.setuptools.packages.find]
include = ["private_pageindex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
